enahncements to schema validation and ddl creation in more complex situations.